--- a/style.css
+++ b/style.css
@@ -40,3 +40,180 @@
     --z-tooltip: 10;
     --z-fixed: 100;
 }
+
+/* ================ base ================ */
+*{
+    box-sizing: border-box;
+    margin: 0%;
+    padding: 0;
+}  
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    margin: var(--header-height) 0 0 0;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    background-color: var(--body-color);
+    color: var(--text-color);
+    line-height: 1.6;
+}
+
+h1,h2,h3,p,ul{
+    margin: 0;
+}
+
+ul{
+    padding: 0;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
+/* ================ CLASS CSS ================ */
+.section{
+    padding: 4rem 0 2rem;
+}
+
+.section-title, .section-subtitle{
+    text-align: center;
+}
+
+.section-title{
+    font-size: var(--h1-font-size);
+    color: var(--title-color);
+    margin-bottom: var(--mb-3);
+}
+
+.section-subtitle{
+    display: block;
+    color: var(--first-color);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1);
+}
+
+/* ================ nav ================ */
+.header{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+    background-color: var(--body-color);
+}
+
+.nav {
+    max-width: 960px;
+    width: calc(100% - 2rem);
+    margin-left: var(--mb-2);
+    margin-right: var(--mb-2);
+    max-width: 1024px;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-menu{
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    padding: 1.5rem 0 1rem;
+    text-align: center;
+    background-color: var(--body-color);
+    transition: .4s;
+    box-shadow: 0 4px 4px rgba(0,0,0,.1);
+    border-radius: 0 0 1rem 1rem;
+    z-index: var(--z-fixed);
+}
+
+.nav-item {
+    margin-bottom: var(--mb-2);
+}
+
+.nav-link, .nav-logo, .nav-toggle{
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+}
+.nav-logo span {
+    font-weight: bold;
+    color: var(--first-color);
+}
+.nav-logo:hover{
+    color: var(--first-color);
+}
+.nav-link{
+    transition: .3s;
+}
+.nav-link:hover{
+    color: var(--first-color);
+}
+.nav-toggle{
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+
+/* Show menu */
+.show-menu{
+    top: var(--header-height);
+}
+
+/* Active menu */
+.active-link{
+    color: var(--first-color);
+}
+
+/* search input */
+.search-box {
+    background: var(--body-color);
+    box-shadow: 0 0px 4px rgb(0 0 0 / 10%);
+    height: 40px;
+    border-radius: 40px;
+    display: flex;
+}
+
+.search-box:hover > .search-text {
+    width: 150px;
+    padding: 0 6px;
+}
+
+.search-box:hover > .search-btn {
+    background: #393939;
+}
+.search-btn {
+    color: var(--body-color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: var(--first-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .4s ;
+}
+
+.search-text {
+    border: none;
+    background: none;
+    outline: none;
+    padding: 0;
+    color: #393939;
+    font-size: 16px;
+    transition: .4s;
+    line-height: 40px;
+    width: 0;
+}
+
+/* Change background header */
+.scroll-header{
+    box-shadow: 0 2px 4px rgba(0,0,0,.1);
+}
