--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ img{
 .active-link{
     color: var(--first-color);
 }
+/* right side */
+.right-side {
+    display: flex;
+}
 
 /* search input */
 .search-box {
@@ -179,6 +183,7 @@ img{
     height: 40px;
     border-radius: 40px;
     display: flex;
+    margin-right: 8px
 }
 
 .search-box:hover > .search-text {
