--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 /* ================ ROOT VARIABLES CSS ================ */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root {
     --header-height: 3rem;
 
@@ -265,4 +270,26 @@ img{
 
 .button:hover {
     background-color: var(--first-color-alt);
+}
+
+/* ======== cardSection =========== */
+.card-section{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* min-height: 100vh;
+    height: 100vh; */
+}
+.card{
+    height: 15rem;
+    width: 100%;
+    margin-top:2rem ;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.card h2{
+    margin-top: 8rem;
+    color: black;
 }
