--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ img{
     margin-right: var(--mb-2);
     
 }
-.card-countries {
+.card-countries, .card-university{
     display: grid;
     gap: 1.5rem;
     grid-template-columns: repeat(1, 1fr);
@@ -345,4 +345,27 @@ img{
 
 .card-button i {
     font-size: 18px;
+}
+
+/* ================ start main university ================ */
+.card-university .card-content {
+    background-image: url(https://images.unsplash.com/photo-1621640786029-220e9ff8dd09?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dW5pdmVyc2l0eSUyMGJ1aWxkaW5nfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
+    background-size: cover;
+}
+.card-university .overlay {
+    width: 100%;
+    height: 100%;
+    background: rgb(0 0 0 / 58%);
+    border-radius: 0.5rem;
+}
+.name-university {
+    color: #fff;
+}
+p.country-name {
+    color: #fff;
+    padding-top: 16px;
+}
+p.country-name span{
+    color: #5bc19a;
+    padding-left: 8px;
 }
