--- a/style.css
+++ b/style.css
@@ -213,12 +213,12 @@ img{
     border: none;
     background: none;
     outline: none;
-    padding: 0;
+    padding-left: 16px;
     color: #393939;
     font-size: 16px;
     transition: .4s;
     line-height: 40px;
-    width: 0;
+    width: 150px;
 }
 
 .search-text-un {
@@ -326,17 +326,19 @@ img{
 .div-img {
     position: relative;
     overflow: hidden;
-    height: 225px;
+    height: 150px;
     border-radius: 0.5rem 0.5rem 0 0;
     border: 4px solid var(--first-color);
 }
 .card-img{
     width: 100%;
+    height: 100%;
     align-self: center;
     margin-bottom: var(--mb-2);
     transition: transform 2s;
-    border-radius: 0.5rem 0.5rem 0 0;
+    border-radius: 0.25rem 0.25rem 0 0;
 }
+
 .card-content:hover .card-img {
     transform: scale(1.2);
 }
@@ -353,8 +355,11 @@ img{
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
     transition: .3s;
-}
 
+}
+a.webLink.button{
+    width: 50px;
+}
 .card-name{
     font-size: var(--normal-font-size);
 }
@@ -383,6 +388,9 @@ img{
     background: rgb(0 0 0 / 58%);
     border-radius: 0.5rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .name-university {
     color: #fff;
@@ -415,7 +423,18 @@ p.country-name span{
     .home {
         margin-top: 100px;
     }
+
+    .search-text{
+        width: 0;
+        padding: 0;
+    }
+
+    .search-box:hover> .search-text {
+        width: 150px;
+        padding-left: 16px;
+    }
 }
+
 @media screen and (min-width: 576px){
     .home-container {
         grid-template-columns: repeat(2,1fr);
